feat: adonis-sail

--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -575,6 +575,18 @@
           "description": "Actions to implement"
         }
       ]
+    },
+    "sail:install": {
+      "settings": {
+        "loadApp": false,
+        "stayAlive": false
+      },
+      "commandPath": "adonis-sail/build/commands/InstallSail",
+      "commandName": "sail:install",
+      "description": "Install Adonis Sail and generate Docker Compose file",
+      "args": [],
+      "aliases": [],
+      "flags": []
     }
   },
   "aliases": {}
