--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
+    "adonis-sail": "^0.0.7",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-adonis": "^2.1.1",
